# adventofcode2021

./: .gitignore  Cargo.toml
day01/: Cargo.toml
day01/src/: main.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: main.rs
day05/src/: main.rs
inputs/: Cargo.toml
inputs/src/: lib.rs
src/: inputs.rs  mod.rs
template/: Cargo.toml
template/src/: main.rs
