[package]
name = "adventofcode2021"
version = "0.1.0"
authors = ["Dominik Berger <dominik.berger@protonmail.com>"]
edition = "2018"

[dependencies]
itertools = "0.10.1"
phf = { version = "0.10.0", features = ["macros"] }
tailcall = "0.1.6"
parse-display = "0.5.3"

[workspace]
members = ["inputs", "day*"]